# sleeper-keeper

./: .gitignore  index.html  keeper-selections.html  keeper-values.html  offseason-proposals.html  pyproject.toml  rookie-draft.html  rookie-lottery.html  rookie-values.html  style.css
.github/workflows/: deploy-offseason-pages.yml
assets/photos/: README.md  crop_headshots.py
draft_prep/: delta_draft_recap.R  nfl_pfr_scrape.R  nfl_rankings_scrape.R  nfl_rankings_scrape.ipynb  rankings_scrape.py  rankings_scrape_python.py
draft_prep/rankings/: __init__.py  combine.py  config.py  excel.py
draft_prep/rankings/sources/: __init__.py  _selenium.py  cbs.py  fantasypros.py  ffb.py  nfc.py  sleeper.py
league_management/: apps_script_combined.js  apps_script_keepers.js  apps_script_proposals.js  delta_keeper_api.py  delta_keeper_scrape.py  delta_offseason_prep.py  generate_offseason_pages.py  offseason_style.css
