[project]
name = "nfl-fantasy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.3",
    "pandas==2.2.3",
    "xlsxwriter==3.2.2",
    "google-auth==2.38.0",
    "google-api-python-client==2.166.0",
    "Pillow==11.2.1",
    "cairosvg>=2.9.0",
    "python-dotenv>=1.2.2",
]
